mautic/mautic.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mautic 
  name: mautic 
spec:
  type: LoadBalancer
  ports:
    - port: 80      
  selector:
    app: mautic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic 
  labels:
    app: mautic 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic 
  template:
    metadata:
      labels:
        app: mautic 
    spec:
      containers:
        - image: jerilcj3/marketing:2.0
          name: mautic
          ports:
            - containerPort: 80
              name: mautic
          volumeMounts:
          - mountPath: "/var/www/html"
            name: mautic-var-www-html
          # Health check
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /s/login
              port: 80
          resources:
            limits:
              memory: 384Mi
            requests:
              memory: 384Mi
      volumes:
        - name: mautic-var-www-html
          persistentVolumeClaim:
            claimName: mautic-pvc
